syntax = "proto3";

package project.planton.provider.kubernetes.temporalkubernetes.v1;

// temporal kubernetes stack outputs store deployment details in the resource status.
message TemporalKubernetesStackOutputs {
  // kubernetes namespace where temporal is deployed
  string namespace = 1;

  // service name for the temporal frontend
  string frontend_service_name = 2;

  // service name for the temporal web ui
  string ui_service_name = 3;

  // command to port-forward the frontend service
  string port_forward_frontend_command = 4;

  // command to port-forward the ui service
  string port_forward_ui_command = 5;

  // internal cluster endpoint for the frontend (e.g. temporal-frontend.namespace.svc:7233)
  string frontend_endpoint = 6;

  // internal cluster endpoint for the ui (e.g. temporal-ui.namespace.svc:8080)
  string web_ui_endpoint = 7;

  // external hostname if load balancer is enabled for the frontend
  string external_frontend_hostname = 8;

  // external hostname for the ui if ingress is configured
  string external_ui_hostname = 9;
}
